--- a/src/main/resources/com/example/FrontEnd/loginCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/loginCustomer.fxml
@@ -83,7 +83,7 @@
       </Button>
       <Button layoutX="542.0" layoutY="405.0" mnemonicParsing="false" onAction="#switchToStart" prefHeight="26.0" prefWidth="173.0" style="-fx-background-color: #474B4D;" text="Cancel" textFill="WHITE">
          <font>
-            <Font size="13.0" />
+            <Font name="Arial" size="13.0" />
          </font>
       </Button>
       <Label layoutX="542.0" layoutY="164.0" prefHeight="71.0" prefWidth="174.0" text="Sign in" textFill="#5d84a4">
