--- a/src/main/resources/com/example/FrontEnd/transferCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/transferCustomer.fxml
@@ -141,6 +141,9 @@
             <Font name="Arial Bold" size="16.0" />
          </font>
       </Label>
-      <Button layoutX="684.0" layoutY="277.0" mnemonicParsing="false" onAction="#onActionButtonTotal" prefHeight="26.0" prefWidth="54.0" text="Total" />
+      <Button layoutX="684.0" layoutY="277.0" mnemonicParsing="false" onAction="#onActionButtonTotal" prefHeight="26.0" prefWidth="54.0" text="Total">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font></Button>
     </children>
 </AnchorPane>
