--- a/src/main/resources/com/example/FrontEnd/loginCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/loginCustomer.fxml
@@ -18,7 +18,7 @@
          <children>
             <Pane prefHeight="112.0" prefWidth="319.0">
                <children>
-                  <Label layoutX="49.0" layoutY="41.0" prefHeight="31.0" prefWidth="221.0" text="JC. LAPEL United Bank" textFill="WHITE">
+                  <Label alignment="CENTER" layoutX="29.0" layoutY="41.0" prefHeight="31.0" prefWidth="258.0" text="JC. LAPEL United Bank" textFill="WHITE">
                      <font>
                         <Font name="Arial Bold" size="20.0" />
                      </font>
@@ -57,7 +57,6 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0" />
          </children>
       </VBox>
-      <Pane layoutX="10.0" layoutY="2.0" prefHeight="120.0" prefWidth="319.0" />
       <Label layoutX="469.0" layoutY="265.0" text="Username">
          <font>
             <Font name="Arial Bold" size="13.0" />
