--- a/src/main/resources/com/example/FrontEnd/registerCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/registerCustomer.fxml
@@ -58,47 +58,38 @@
             </children>
         </VBox>
         <Pane layoutX="10.0" layoutY="2.0" prefHeight="120.0" prefWidth="319.0" />
-        <Label layoutX="384.0" layoutY="209.0" text="Firstname">
+        <Label layoutX="386.0" layoutY="233.0" text="Firstname:">
             <font>
                 <Font name="Arial" size="13.0" />
             </font>
         </Label>
-        <TextField fx:id="firstnameTextField" layoutX="384.0" layoutY="228.0" prefHeight="26.0" prefWidth="232.0" promptText="Firstname">
+        <TextField fx:id="firstnameTextField" layoutX="386.0" layoutY="252.0" prefHeight="26.0" prefWidth="232.0" promptText="Firstname">
          <font>
             <Font name="Arial" size="12.0" />
          </font></TextField>
-      <TextField fx:id="lastnameTextField" layoutX="384.0" layoutY="282.0" prefHeight="26.0" prefWidth="232.0" promptText="Lastname">
+      <TextField fx:id="lastnameTextField" layoutX="386.0" layoutY="306.0" prefHeight="26.0" prefWidth="232.0" promptText="Lastname">
          <font>
             <Font name="Arial" size="12.0" />
          </font></TextField>
-      <TextField fx:id="usernameTextField" layoutX="384.0" layoutY="339.0" prefHeight="26.0" prefWidth="232.0" promptText="Username">
-         <font>
-            <Font name="Arial" size="12.0" />
-         </font></TextField>
-        <PasswordField fx:id="setPasswordField" layoutX="384.0" layoutY="393.0" prefHeight="26.0" prefWidth="232.0" promptText="Password">
+        <PasswordField fx:id="setPasswordField" layoutX="386.0" layoutY="353.0" prefHeight="26.0" prefWidth="232.0" promptText="Password">
          <font>
             <Font name="Arial" size="12.0" />
          </font></PasswordField>
-      <PasswordField fx:id="confirmPasswordField" layoutX="384.0" layoutY="450.0" prefHeight="26.0" prefWidth="232.0" promptText="Confirm Password">
+      <PasswordField fx:id="confirmPasswordField" layoutX="386.0" layoutY="410.0" prefHeight="26.0" prefWidth="232.0" promptText="Confirm Password">
          <font>
             <Font name="Arial" size="12.0" />
          </font></PasswordField>
-        <Button fx:id="createAccountButton" layoutX="382.0" layoutY="501.0" mnemonicParsing="false" onAction="#onActionCreateAccount" prefHeight="27.0" prefWidth="232.0" style="-fx-background-color: #474B4D;" text="Create Account" textFill="WHITE">
+        <Button fx:id="createAccountButton" layoutX="384.0" layoutY="461.0" mnemonicParsing="false" onAction="#onActionCreateAccount" prefHeight="27.0" prefWidth="232.0" style="-fx-background-color: #474B4D;" text="Create Account" textFill="WHITE">
             <font>
                 <Font name="Arial" size="13.0" />
             </font>
         </Button>
-        <Button fx:id="cancelButton" layoutX="382.0" layoutY="541.0" mnemonicParsing="false" onAction="#switchToStart" prefHeight="27.0" prefWidth="232.0" style="-fx-background-color: #474B4D;" text="Cancel" textFill="WHITE">
+        <Button fx:id="cancelButton" layoutX="384.0" layoutY="501.0" mnemonicParsing="false" onAction="#switchToStart" prefHeight="27.0" prefWidth="232.0" style="-fx-background-color: #474B4D;" text="Cancel" textFill="WHITE">
             <font>
                 <Font name="Arial" size="13.0" />
             </font>
         </Button>
-      <Label layoutX="384.0" layoutY="320.0" text="Username">
-         <font>
-            <Font name="Arial" size="13.0" />
-         </font>
-      </Label>
-        <Label layoutX="386.0" layoutY="373.0" text="Password">
+        <Label layoutX="388.0" layoutY="333.0" text="Password:">
             <font>
                 <Font name="Arial" size="13.0" />
             </font>
@@ -120,12 +111,12 @@
                 </Label>
             </children>
         </Pane>
-      <Label layoutX="384.0" layoutY="263.0" text="Lastname">
+      <Label layoutX="386.0" layoutY="287.0" text="Lastname">
          <font>
             <Font name="Arial" size="13.0" />
          </font>
       </Label>
-      <Label layoutX="382.0" layoutY="430.0" text="Confirm Password">
+      <Label layoutX="384.0" layoutY="390.0" text="Confirm Password:">
          <font>
             <Font name="Arial" size="13.0" />
          </font>
