--- a/src/main/resources/com/example/FrontEnd/userMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/userMenu.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.image.ImageView?>
@@ -126,11 +127,6 @@
       <Pane layoutX="319.0" layoutY="116.0" prefHeight="563.0" prefWidth="620.0">
          <children>
             <ImageView fx:id="ImageProfile" fitHeight="147.0" fitWidth="166.0" layoutX="441.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="userName" alignment="BASELINE_CENTER" layoutY="18.0" prefHeight="35.0" prefWidth="413.0" text="Username" textAlignment="CENTER">
-               <font>
-                  <Font name="Arial Bold" size="24.0" />
-               </font>
-            </Label>
             <Label alignment="CENTER_RIGHT" layoutX="13.0" layoutY="89.0" prefHeight="35.0" prefWidth="90.0" text="Name: " textAlignment="CENTER">
                <font>
                   <Font name="Arial Bold" size="24.0" />
@@ -198,6 +194,7 @@
                   </Label>
                </children>
             </Pane>
+            <TextField fx:id="userName" layoutX="195.0" layoutY="32.0" />
          </children>
       </Pane>
    </children>
