--- a/src/main/resources/com/example/FrontEnd/start.fxml
+++ b/src/main/resources/com/example/FrontEnd/start.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -103,5 +104,20 @@
             </Label>
          </children>
       </Pane>
+      <TextField layoutX="327.0" layoutY="182.0" prefHeight="55.0" prefWidth="582.0" text="1. You can create an account by pressing &quot;Create account&quot;. ">
+         <font>
+            <Font name="Arial" size="11.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="327.0" layoutY="253.0" prefHeight="55.0" prefWidth="582.0" text="2. When you have created your account you will be sent to the main page to your account">
+         <font>
+            <Font name="Arial" size="11.0" />
+         </font>
+      </TextField>
+      <TextField layoutX="327.0" layoutY="326.0" prefHeight="55.0" prefWidth="582.0" text="3. At the top you will see your &quot;User ID&quot;. You will need that to login to your account with your password you created">
+         <font>
+            <Font name="Arial" size="11.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
