--- a/src/main/resources/com/example/FrontEnd/userMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/userMenu.fxml
@@ -195,6 +195,11 @@
                </children>
             </Pane>
             <TextField fx:id="userName" layoutX="195.0" layoutY="32.0" />
+            <Label layoutX="96.0" layoutY="33.0" text="USER ID:">
+               <font>
+                  <Font name="Arial Bold" size="20.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </children>
