--- a/src/main/resources/com/example/FrontEnd/employeeMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/employeeMenu.fxml
@@ -26,7 +26,7 @@
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" />
                     </children>
                 </Pane>
-                <Button alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToStart" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Logout" textFill="WHITE">
+                <Button alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToStart" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="LOGOUT" textFill="WHITE">
                     <opaqueInsets>
                         <Insets />
                     </opaqueInsets>
@@ -40,7 +40,7 @@
                         <Glow />
                     </effect>
                 </Button>
-                <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="122.0" mnemonicParsing="false" onAction="#switchToTransfer" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Transfer" textFill="WHITE">
+                <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="122.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="LIST OF CUSTOMERS" textFill="WHITE">
                     <opaqueInsets>
                         <Insets />
                     </opaqueInsets>
@@ -54,7 +54,7 @@
                         <Glow />
                     </effect>
                 </Button>
-                <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="122.0" mnemonicParsing="false" onAction="#switchToProfile" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Profile" textFill="WHITE">
+                <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="122.0" mnemonicParsing="false" onAction="#switchToProfile" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="PROFILE" textFill="WHITE">
                     <opaqueInsets>
                         <Insets />
                     </opaqueInsets>
@@ -209,7 +209,7 @@
                     </children>
                 </Pane>
                 <TextField fx:id="userName" layoutX="195.0" layoutY="32.0" />
-                <Label layoutX="96.0" layoutY="33.0" text="USER ID:">
+                <Label layoutX="31.0" layoutY="33.0" text="EMPLOYEE ID:">
                     <font>
                         <Font name="Arial Bold" size="20.0" />
                     </font>
