--- a/src/main/resources/com/example/FrontEnd/transferCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/transferCustomer.fxml
@@ -26,7 +26,7 @@
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" />
                     </children>
                 </Pane>
-                <Button alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToCustomerMenu" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="User menu" textFill="WHITE">
+                <Button fx:id="userMenu" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToCustomerMenu" onMouseEntered="#confirmHoverInUser" onMouseExited="#confirmHoverOutUser" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="User menu" textFill="WHITE">
                     <opaqueInsets>
                         <Insets />
                     </opaqueInsets>
@@ -40,7 +40,7 @@
                         <Glow />
                     </effect>
                 </Button>
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToStart" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="SIGN OUT" textFill="WHITE">
+            <Button fx:id="SignOut" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToStart" onMouseEntered="#confirmHoverInSignO" onMouseExited="#confirmHoverOutSignO" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="SIGN OUT" textFill="WHITE">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
