--- a/src/main/resources/com/example/FrontEnd/loginCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/loginCustomer.fxml
@@ -57,12 +57,12 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0" />
          </children>
       </VBox>
-      <Label layoutX="469.0" layoutY="265.0" text="Username">
+      <Label layoutX="469.0" layoutY="265.0" text="ID">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
       </Label>
-      <TextField fx:id="usernameTextField" layoutX="542.0" layoutY="262.0" prefHeight="26.0" prefWidth="173.0" promptText="Username">
+      <TextField fx:id="ID" layoutX="542.0" layoutY="262.0" prefHeight="26.0" prefWidth="173.0" promptText="ID">
          <font>
             <Font name="Arial" size="12.0" />
          </font></TextField>
