--- a/src/main/resources/com/example/FrontEnd/employeeMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/employeeMenu.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -168,42 +167,50 @@
                         <Font name="Arial Bold" size="20.0" />
                     </font>
                 </Label>
-                  <Label fx:id="position" layoutX="22.0" layoutY="192.0" prefHeight="25.0" prefWidth="390.0" text="Nothing came up" textAlignment="CENTER">
+                  <Label fx:id="position" layoutX="132.0" layoutY="192.0" prefHeight="27.0" prefWidth="201.0" text="Nothing came up" textAlignment="CENTER">
                       <font>
                           <Font name="Arial Bold" size="24.0" />
                       </font>
                   </Label>
-            <Label alignment="CENTER_RIGHT" layoutX="19.0" layoutY="157.0" prefHeight="35.0" prefWidth="112.0" text="Position: " textAlignment="CENTER">
+            <Label alignment="CENTER_RIGHT" layoutX="24.0" layoutY="188.0" prefHeight="35.0" prefWidth="112.0" text="Position: " textAlignment="CENTER">
                <font>
                   <Font name="Arial Bold" size="24.0" />
                </font>
             </Label>
-            <ListView fx:id="ListOfCustomers" layoutX="23.0" layoutY="254.0" prefHeight="200.0" prefWidth="200.0" />
-            <ChoiceBox fx:id="chooseActiveCustomer" layoutX="441.0" layoutY="257.0" prefWidth="150.0" />
-            <Label alignment="CENTER_RIGHT" layoutX="60.0" layoutY="219.0" prefHeight="35.0" prefWidth="125.0" text="Customer:" textAlignment="CENTER">
-               <font>
-                  <Font name="Arial Bold" size="24.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER_RIGHT" layoutX="454.0" layoutY="327.0" prefHeight="35.0" prefWidth="125.0" text="Employee:" textAlignment="CENTER">
-               <font>
-                  <Font name="Arial Bold" size="24.0" />
-               </font>
-            </Label>
-            <ListView fx:id="ListOfEmployee" layoutX="227.0" layoutY="254.0" prefHeight="200.0" prefWidth="200.0" />
-            <Label alignment="CENTER_RIGHT" layoutX="264.0" layoutY="219.0" prefHeight="35.0" prefWidth="125.0" text="Employee:" textAlignment="CENTER">
-               <font>
-                  <Font name="Arial Bold" size="24.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER_RIGHT" layoutX="454.0" layoutY="219.0" prefHeight="35.0" prefWidth="125.0" text="Customer:" textAlignment="CENTER">
-               <font>
-                  <Font name="Arial Bold" size="24.0" />
-               </font>
-            </Label>
-            <ChoiceBox fx:id="chooseActiveEmployee" layoutX="441.0" layoutY="362.0" prefWidth="150.0" />
+            <ListView fx:id="listOfCustomers" layoutX="13.0" layoutY="351.0" prefHeight="201.0" prefWidth="307.0" />
+            <ListView fx:id="listOfEmployee" layoutX="320.0" layoutY="351.0" prefHeight="201.0" prefWidth="307.0" />
             <Button layoutX="97.0" layoutY="96.0" mnemonicParsing="false" onAction="#onActionChangeName" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="25.0" prefWidth="92.0" text="Change name" />
-            <TextField fx:id="changeIDTextField" layoutX="202.0" layoutY="93.0" prefHeight="25.0" prefWidth="200.0" />
+            <TextField fx:id="changeIDTextField" layoutX="197.0" layoutY="96.0" prefHeight="25.0" prefWidth="200.0" />
+            <Button layoutX="87.0" layoutY="310.0" mnemonicParsing="false" onAction="#onActionChooseCustomer" text="Select a customer">
+               <font>
+                  <Font name="Arial" size="17.0" />
+               </font>
+            </Button>
+            <Label alignment="CENTER_RIGHT" layoutX="24.0" layoutY="228.0" prefHeight="35.0" prefWidth="231.0" text="selected Customer: " textAlignment="CENTER">
+               <font>
+                  <Font name="Arial Bold" size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="SelectedCustomer" layoutX="252.0" layoutY="228.0" prefHeight="35.0" prefWidth="376.0" text="Select Customer" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial Bold" size="24.0" />
+               </font>
+            </Label>
+            <Button layoutX="393.0" layoutY="310.0" mnemonicParsing="false" onAction="#onActionChooseEmployee" text="Select a employee">
+               <font>
+                  <Font name="Arial" size="17.0" />
+               </font>
+            </Button>
+            <Label alignment="CENTER_RIGHT" layoutX="24.0" layoutY="263.0" prefHeight="35.0" prefWidth="231.0" text="selected Employee: " textAlignment="CENTER">
+               <font>
+                  <Font name="Arial Bold" size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="SelectedEmployee" layoutX="252.0" layoutY="263.0" prefHeight="35.0" prefWidth="376.0" text="Select employee" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial Bold" size="24.0" />
+               </font>
+            </Label>
             </children>
         </Pane>
     </children>
