--- a/src/main/resources/com/example/FrontEnd/userMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/userMenu.fxml
@@ -164,22 +164,12 @@
                         <Font name="Arial Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Label fx:id="SavingTotal" layoutX="174.0" layoutY="14.0" prefHeight="35.0" prefWidth="413.0" text="Total" textAlignment="CENTER">
+                  <Label fx:id="savingBalance" layoutX="174.0" layoutY="14.0" prefHeight="35.0" prefWidth="413.0" text="Total" textAlignment="CENTER">
                      <font>
                         <Font name="Arial Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Label fx:id="CheckingTotal" layoutX="174.0" layoutY="49.0" prefHeight="35.0" prefWidth="413.0" text="Total" textAlignment="CENTER">
-                     <font>
-                        <Font name="Arial Bold" size="24.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="14.0" layoutY="84.0" prefHeight="35.0" prefWidth="141.0" text="Other          " textAlignment="CENTER">
-                     <font>
-                        <Font name="Arial Bold" size="24.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="OtherTotal" layoutX="174.0" layoutY="84.0" prefHeight="35.0" prefWidth="413.0" text="Total" textAlignment="CENTER">
+                  <Label fx:id="checkingBalance" layoutX="174.0" layoutY="49.0" prefHeight="35.0" prefWidth="413.0" text="Total" textAlignment="CENTER">
                      <font>
                         <Font name="Arial Bold" size="24.0" />
                      </font>
