--- a/src/main/resources/com/example/FrontEnd/userMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/userMenu.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
@@ -152,30 +153,6 @@
                   <Font name="Arial Bold" size="24.0" />
                </font>
             </Label>
-            <Pane layoutX="13.0" layoutY="161.0" prefHeight="135.0" prefWidth="594.0">
-               <children>
-                  <Label layoutX="14.0" layoutY="14.0" prefHeight="35.0" prefWidth="141.0" text="Saving         " textAlignment="CENTER">
-                     <font>
-                        <Font name="Arial Bold" size="24.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="14.0" layoutY="49.0" prefHeight="35.0" prefWidth="147.0" text="Checking     " textAlignment="CENTER">
-                     <font>
-                        <Font name="Arial Bold" size="24.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="savingBalance" layoutX="174.0" layoutY="14.0" prefHeight="35.0" prefWidth="413.0" text="Total" textAlignment="CENTER">
-                     <font>
-                        <Font name="Arial Bold" size="24.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="checkingBalance" layoutX="174.0" layoutY="49.0" prefHeight="35.0" prefWidth="413.0" text="Total" textAlignment="CENTER">
-                     <font>
-                        <Font name="Arial Bold" size="24.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
             <Pane layoutX="350.0" layoutY="402.0" prefHeight="147.0" prefWidth="257.0">
                <children>
                   <Button fx:id="manualButton" contentDisplay="CENTER" layoutX="18.0" layoutY="73.0" mnemonicParsing="false" onAction="#switchToManual" onMouseEntered="#confirmHoverInManB" onMouseExited="#confirmHoverOutManB" prefHeight="55.0" prefWidth="230.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="MANUAL / About us" textFill="WHITE">
@@ -202,6 +179,7 @@
                   <Font name="Arial Bold" size="20.0" />
                </font>
             </Label>
+            <ListView fx:id="loadListOfAccount" layoutX="14.0" layoutY="161.0" prefHeight="200.0" prefWidth="587.0" />
          </children>
       </Pane>
    </children>
