--- a/src/main/resources/com/example/FrontEnd/start.fxml
+++ b/src/main/resources/com/example/FrontEnd/start.fxml
@@ -31,7 +31,7 @@
                   <Insets left="50.0" />
                </padding>
                <font>
-                  <Font name="Arial Bold" size="20.0" />
+                  <Font name="Arial" size="20.0" />
                </font>
                <effect>
                   <Glow />
