--- a/src/main/resources/com/example/FrontEnd/start.fxml
+++ b/src/main/resources/com/example/FrontEnd/start.fxml
@@ -23,7 +23,7 @@
                   </Label>
                </children>
             </Pane>
-            <Button fx:id="loginButton" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToLoginCustomer" onMouseEntered="#confirmHoverInLog" onMouseExited="#confirmHoverOutLog" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" styleClass="font" stylesheets="@../../../style.css" text="Login" textFill="WHITE">
+            <Button fx:id="loginButton" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToLoginCustomer" onMouseEntered="#confirmHoverInLog" onMouseExited="#confirmHoverOutLog" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Login" textFill="WHITE">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -31,7 +31,7 @@
                   <Insets left="50.0" />
                </padding>
                <font>
-                  <Font name="Arial" size="20.0" />
+                  <Font name="Arial" size="17.0" />
                </font>
                <effect>
                   <Glow />
