--- a/src/main/resources/com/example/FrontEnd/userMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/userMenu.fxml
@@ -34,7 +34,7 @@
                   <Insets left="50.0" />
                </padding>
                <font>
-                  <Font name="Arial Bold" size="17.0" />
+                  <Font name="Arial" size="17.0" />
                </font>
                <effect>
                   <Glow />
